--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 								</p>
 							</li>
 							<li>
-								<a class="external-link" href="http://galaxy-explorer.com/" target="_blank" title="Open the Galaxy Explorer site in a new window"><img src="img/galaxy-explorer-site.jpg" alt="Galaxy Explorer Site"></a>
+								<a><img src="img/galaxy-explorer-site.jpg" alt="Galaxy Explorer Site"></a>
 								<p>
 									Parallax, jQuery, HTML5, CSS3, Facebook, Google+, and Twitter social buttons
 								</p>
 							</li>
 							<li>
-								<a class="external-link" href="https://www.chase.com/debit-reloadable-cards/liquid-prepaid-card" target="_blank" title="Open the Chase Liquid site in a new window"><img src="img/chase-liquid.jpg" alt="Chase Liquid Site"></a>
+								<a><img src="img/chase-liquid.jpg" alt="Chase Liquid Site"></a>
 								<p>
 									ADA Accessibility Compliant, jQuery, HTML5, and CSS3
 								</p>
