--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 					<h3 id="portfolio-header">Portfolio</h3>
 						<ul class="gallery">
 							<li>
-								<a class="external-link" href="http://fairfield.marriott.com/" target="_blank" title="Open the Fairfiled site in a new window"><img src="img/marriott-fairfield-responsive.jpg" alt="Marriott Fairfield Site"></a>
+								<a><img src="img/marriott-fairfield-responsive.jpg" alt="Marriott Fairfield Site"></a>
 								<p>
 									Responsive Design, jQuery, HTML5, CSS3, Google Analytics, and Youtube video
 								</p>
 							</li>
 							<li>
-								<a class="external-link" href="http://chasejacksonville.com/" target="_blank" title="Open the Chase Jacksonville site in a new window"><img src="img/chase-jacksonville-responsive.jpg" alt="Chase Jacksonville Site"></a>
+								<a><img src="img/chase-jacksonville-responsive.jpg" alt="Chase Jacksonville Site"></a>
 								<p>
 									Responsive Design, jQuery, HTML5, CSS3, Google Analytics, and Youtube video
 								</p>
