Update old copy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!--[if IE]>
 			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<![endif]-->
-		<title>John Ghioca | The Portfolio of a Front-End Developer</title>
+		<title>John Ghioca | The Portfolio of a Web Developer</title>
 		<meta name="description" content="John Ghioca, a freelance web developer, uses the latest web technologies to produce effective and optimized web experiences.">
 		<meta name="viewport" content="width=device-width">
 
@@ -56,7 +56,7 @@
 						Hello, my name is <span>John&nbsp;Ghioca</span>.
 					</h2>
 					<h3 class="sub-head">
-						I'm a front end developer mainly specializing in <span>HTML5</span>, <span>CSS3</span>, and&nbsp;<span>Javascript</span>. Check out some&nbsp;of the sites I&nbsp;worked&nbsp;on below.
+						I'm a web developer using popular libraries, such as <span>React</span> and <span>Express.js</span>, to create websites and apps. Check out some&nbsp;of the sites I&nbsp;worked&nbsp;on below.
 					</h3>
                 </header>
 				<section class="portfolio">
