Update form submission

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<h3 id="contact-header">
 						Contact
 					</h3>
-					<form class="contact-form" action="https://fwdform.herokuapp.com/user/29ea7e33-930d-47da-b1a6-9c212b9e6aeb" method="post">
+					<form class="contact-form" action="https://formspree.io/f/mnqwvegb" method="post">
 						<fieldset class="name-container">
 							<label for="name">Your Name</label>
 							<input type="text" id="name" name="name" placeholder="Name" required />
@@ -144,7 +144,7 @@
 							<small>*All fields are required.</small>
 						</p>
 						<fieldset>
-							<input type="submit" class="submit" name="submit" value="Send" />
+							<button class="submit" type="submit">Send</button>
 						</fieldset>
 					</form>
 				</section>
